--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       height: 100%;
       background-color: rgba(0, 0, 0, 0.294);
       backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(30px);
       transition: right 0.3s ease;
       z-index: 999;
       color: white;
